Jwt token stored in cookies instead of headers

--- a/web/src/main/resources/templates/security/login.html
+++ b/web/src/main/resources/templates/security/login.html
@@ -25,7 +25,7 @@
                 <form>
                     <div class="form-outline mb-4">
                         <p id="incorrect-login" class='my-0 incorrect' th:text="#{log.incorrect-login}"></p>
-                        <input type="email" id="login-input" class="form-control form-control-lg"
+                        <input type="text" id="login-input" class="form-control form-control-lg"
                                th:placeholder="#{log.enter-log}" />
                         <label class="form-label" for="login-input" th:text="#{log.login}"></label>
                     </div>
