Redirection after login fixed

--- a/web/src/main/resources/templates/security/login.html
+++ b/web/src/main/resources/templates/security/login.html
@@ -22,11 +22,11 @@
                      class="img-fluid" alt="Sample image">
             </div>
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <form>
+                <form th:action="@{/authenticate}" th:object="${authRequest}" method="post">
                     <div class="form-outline mb-4">
                         <p id="incorrect-login" class='my-0 incorrect' th:text="#{log.incorrect-login}"></p>
                         <input type="text" id="login-input" class="form-control form-control-lg"
-                               th:placeholder="#{log.enter-log}" />
+                               th:placeholder="#{log.enter-log}" th:field="*{login}" name="login"/>
                         <label class="form-label" for="login-input" th:text="#{log.login}"></label>
                     </div>
 
@@ -34,12 +34,12 @@
                     <div class="form-outline mb-3">
                         <p id="incorrect-password" class='my-0 incorrect' th:text="#{log.incorrect-password}"></p>
                         <input type="password" id="password-input" class="form-control form-control-lg"
-                               th:placeholder="#{log.enter-password}"/>
+                               th:placeholder="#{log.enter-password}" th:field="*{password}" name="password"/>
                         <label class="form-label" for="password-input" th:text="#{log.password}"></label>
                     </div>
 
                     <div class="text-center text-lg-start mt-4 pt-2">
-                        <button id="login-btn" type="button" class="btn btn-primary btn-lg"
+                        <button id="login-btn" type="submit" class="btn btn-primary btn-lg"
                                 style="padding-left: 2.5rem; padding-right: 2.5rem;" th:text="#{log.doLogin}">Login
                         </button>
                         <p class="small fw-bold mt-2 pt-1 mb-0"><span th:text="#{log.dontHaveAcc}" th:remove="tag"></span> <a id="register-link" class="link-danger" th:text="#{log.doRegister}"></a>
