--- a/web/src/main/resources/templates/personal-cabinet/personal_cabinet.html
+++ b/web/src/main/resources/templates/personal-cabinet/personal_cabinet.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <title>Hello, world!</title>
-    <link rel="stylesheet" href="../../static/css/personal_cabinet.css"/>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -55,7 +54,7 @@
 
         </div>
         <div class="d-grid gap-2 d-md-block col-10">
-            <button id="logout" class="btn btn-outline-primary mt-4 mb-2" type="button" th:text="#{logout}"></button>
+            <button id="logout" class="btn btn-primary w-100 mt-4 mb-2" type="button" th:text="#{logout}"></button>
         </div>
     </th:block>
 </div>
