Profile link added to Redactor, admin organisation.html

--- a/web/src/main/resources/templates/fragment/admin/home.html
+++ b/web/src/main/resources/templates/fragment/admin/home.html
@@ -9,7 +9,7 @@
         <div class="col-10 d-flex flex-column">
             <p class="org_name text-center p-2" th:text="#{greeting}"></p>
         </div>
-        <img th:src="@{/img/person.svg}" class="d-block mx-auto"
+        <img th:src="@{/img/person.svg}" class="d-block mx-auto profile-link"
              width="35">
     </div>
 
