--- a/web/src/main/resources/templates/fragment/redactor/organisation.html
+++ b/web/src/main/resources/templates/fragment/redactor/organisation.html
@@ -11,7 +11,7 @@
             <p class="org_description p-2" th:text="${org.description}"></p>
             <p class="org_address text-center p-2" th:text="${org.address}"></p>
         </div>
-        <img th:src="@{/img/person.svg}" class="d-block mx-auto"
+        <img th:src="@{/img/person.svg}" class="d-block mx-auto profile-link"
              width="35">
     </div>
 
