--- a/web/src/main/resources/templates/personal-cabinet/personal_cabinet.html
+++ b/web/src/main/resources/templates/personal-cabinet/personal_cabinet.html
@@ -23,7 +23,7 @@
     <div class="col-1 my-auto mx-auto">
         <img th:src="@{/img/arrow-left-circle.svg}" class="img-fluid go-back-button"
              width="24"
-             onclick="goBack()">
+             th:onclick="goBack([[${referer.toString()}]])">
     </div>
     <div class="d-flex flex-column col-11">
         <p class="text-center p-2" th:text="#{personal_account}"></p>
@@ -37,9 +37,9 @@
             <p id="change_lang" style="color: rgb(154, 164, 196)" class="mx-0" th:text="#{change_lang}"></p>
         </div>
         <div class="col">
-            <select class="form-select">
-                <option th:text="#{russian}"></option>
-                <option th:text="#{english}"></option>
+            <select id="langs" class="form-select">
+                <option id="ru" value="ru" th:text="#{russian}"></option>
+                <option id="en" value="en" th:text="#{english}"></option>
             </select>
         </div>
     </div>
@@ -59,9 +59,14 @@
     </th:block>
 </div>
 
-
-
 <script type="text/javascript" th:src="@{/js/personal_cabinet/personal_cabinet.js}"></script>
+
+<script defer>
+    setLocale('[[${locale}]]')
+</script>
+
+
+
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
