--- a/web/src/main/resources/templates/personal-cabinet/personal_cabinet.html
+++ b/web/src/main/resources/templates/personal-cabinet/personal_cabinet.html
@@ -28,7 +28,9 @@
     <div class="d-flex flex-column col-11">
         <p class="text-center p-2" th:text="#{personal_account}"></p>
     </div>
-    <div class="d-flex justify-content-start container">
+
+    <hr style="width:100%;text-align:left;margin-left:0">
+    <div class="d-flex justify-content-start container mt-2">
         <div class="mx-2">
             <img th:src="@{/img/language.png}" class="img-fluid go-back-button"
                  width="24">
@@ -48,11 +50,23 @@
             <button id="login" class="btn btn-primary w-100 mt-4 mb-2" type="button" th:text="#{login}"></button>
         </div>
     </th:block>
-
     <th:block sec:authorize="!isAnonymous()">
-        <div>
-
-        </div>
+        <th:block sec:authorize="hasAuthority('USER')">
+            <div id="view-profile" class="d-flex justify-content-start container my-3">
+                <img th:src="@{/img/free-icon-profile-3524752.png}" class="img-fluid go-back-button mx-2"
+                     width="24">
+                <div class="col-10">
+                    <p th:text="#{my-profile}"></p>
+                </div>
+            </div>
+            <div id="view-records" class="d-flex justify-content-start container my-3">
+                <img th:src="@{/img/calendar.svg}" class="img-fluid go-back-button mx-2"
+                     width="24">
+                <div class="col-10 align-middle">
+                    <p class="align-middle" th:text="#{my-records}"></p>
+                </div>
+            </div>
+        </th:block>
         <div class="d-grid gap-2 d-md-block col-10">
             <button id="logout" class="btn btn-primary w-100 mt-4 mb-2" type="button" th:text="#{logout}"></button>
         </div>
@@ -64,7 +78,6 @@
 <script defer>
     setLocale('[[${locale}]]')
 </script>
-
 
 
 <script
