--- a/web/src/main/resources/templates/profile/updateProfile.html
+++ b/web/src/main/resources/templates/profile/updateProfile.html
@@ -35,7 +35,8 @@
                 <span class="input-group-text" id="basic-addon4" th:text="#{updateProfile.login}"></span>
             </div>
             <input type="text" id="login" class="form-control" th:placeholder="#{updateProfile.login}"
-                   aria-label="Description" aria-describedby="basic-addon3" th:value="${user.login}" disabled>
+                   aria-label="Description" aria-describedby="basic-addon3" onchange="validateLogin()"
+                   th:value="${user.login}" disabled>
         </div>
     </div>
 
@@ -45,17 +46,23 @@
                 <span class="input-group-text" id="basic-addon5" th:text="#{updateProfile.password}"></span>
             </div>
             <input type="text" id="password" class="form-control" th:placeholder="#{updateProfile.password}"
-                   aria-label="Description" aria-describedby="basic-addon3">
-            <p id="incorrect-password" class='my-0 incorrect' th:text="#{reg.incorrect-password}"></p>
+                   aria-label="Description" onchange="validatePassword()" aria-describedby="basic-addon3" disabled>
+
         </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="updatePasswordCheckbox" th:onclick="enablePasswordChange()">
+            <label class="form-check-label" for="updatePasswordCheckbox" th:text="#{updateProfile.updatePassword}"></label>
+        </div>
+        <p id="incorrect-password" class='my-0 incorrect' th:text="#{reg.incorrect-password}"></p>
     </div>
     <div class="option d-flex container-fluid px-0 my-3">
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1" th:text="#{updateProfile.firstName}"></span>
             </div>
-            <input type="text" id="name" class="form-control" th:placeholder="#{updateProfile.firstName}"
-                   aria-label="Name" aria-describedby="basic-addon1" th:value="${profile.firstName}">
+            <input type="text" id="firstName" class="form-control" th:placeholder="#{updateProfile.firstName}"
+                   aria-label="Name" onchange="validateFirstName()" aria-describedby="basic-addon1"
+                   th:value="${profile.firstName}">
         </div>
     </div>
 
@@ -64,41 +71,45 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon2" th:text="#{updateProfile.lastName}"></span>
             </div>
-            <input type="text" id="address" class="form-control" th:placeholder="#{updateProfile.lastName}"
-                   aria-label="LastName" aria-describedby="basic-addon2" th:value="${profile.lastName}">
+            <input type="text" id="lastName" class="form-control" th:placeholder="#{updateProfile.lastName}"
+                   aria-label="LastName" onchange="validateLastName()" aria-describedby="basic-addon2"
+                   th:value="${profile.lastName}">
         </div>
-    </div>
-
-    <div class="option d-flex container-fluid px-0 my-3">
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon3" th:text="#{updateProfile.email}"></span>
-                </div>
-                <input type="text" id="email" class="form-control" th:placeholder="#{updateProfile.email}"
-                       aria-label="Description" aria-describedby="basic-addon3" th:value="${profile.email}">
-            </div>
-            <p id="incorrect-email" class='my-0 incorrect'
-               th:text="#{reg.incorrect-email}"></p>
-            <p id="incorrect-email-exists" class='my-0 incorrect'
-               th:text="#{reg.incorrect-email.exists}"></p>
     </div>
 
     <div class="option d-flex container-fluid px-0 my-3">
         <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon3" th:text="#{updateProfile.phoneNumber}"></span>
-                </div>
-                <input type="text" id="phoneNumber" class="form-control" th:placeholder="#{updateProfile.phoneNumber}"
-                       aria-label="Description" aria-describedby="basic-addon3" th:value="${profile.phoneNumber}">
+            <div class="input-group-prepend">
+                <span class="input-group-text" th:text="#{updateProfile.email}"></span>
+            </div>
+            <input type="text" id="email" class="form-control" th:placeholder="#{updateProfile.email}"
+                   aria-label="Description" th:onchange="validateEmail([[${profile.email}]])"
+                   aria-describedby="basic-addon3" th:value="${profile.email}">
+        </div>
+        <p id="incorrect-email" class='my-0 incorrect'
+           th:text="#{reg.incorrect-email}"></p>
+        <p id="incorrect-email-exists" class='my-0 incorrect'
+           th:text="#{reg.incorrect-email.exists}"></p>
+    </div>
+
+    <div class="option d-flex container-fluid px-0 my-3">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon3" th:text="#{updateProfile.phoneNumber}"></span>
+            </div>
+            <input type="text" id="phoneNumber" class="form-control" th:placeholder="#{updateProfile.phoneNumber}"
+                   aria-label="Description" aria-describedby="basic-addon3"
+                   th:onchange="validatePhoneNumber([[${profile.phoneNumber}]])"
+                   th:value="${profile.phoneNumber}">
 
         </div>
         <p id="incorrect-phoneNumber" class='my-0 incorrect'
-                 th:text="#{reg.incorrect-phoneNumber}"></p>
+           th:text="#{reg.incorrect-phoneNumber}"></p>
         <p id="incorrect-phoneNumber-exists" class='my-0 incorrect'
            th:text="#{reg.incorrect-phoneNumber.exists}"></p>
     </div>
 
-    <button type="button" id="update" class="btn btn-primary mx-1 w-40" th:onclick="updateProfile()"
+    <button type="button" id="update" class="btn btn-primary mx-1 w-40" th:onclick="updateProfile([[${profile}]])"
             th:text="#{updateProfile.update}"></button>
     <button type="button" id="delete" class="btn btn-danger mx-1 w-40" th:onclick="deleteProfile([[${profile.id}]])"
             th:text="#{updateProfile.delete}">Удалить
