--- a/web/src/main/resources/static/css/assignSchedule.css
+++ b/web/src/main/resources/static/css/assignSchedule.css
@@ -10,3 +10,11 @@
     background-color: rgb(255, 255, 255);
     border-radius: 5px
 }
+
+.red {
+    color: red;
+}
+
+.green {
+    color: green;
+}
