--- a/web/src/main/resources/templates/select-time/assignSchedule.html
+++ b/web/src/main/resources/templates/select-time/assignSchedule.html
@@ -11,6 +11,7 @@
           crossorigin="anonymous"/>
 
 
+    <link th:href="@{/css/organisation.css}" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
@@ -105,70 +106,86 @@
     <p th:text="#{record.cancel}"></p>
 </div>
 
-<!--<div id="deleteRecords" class="option d-flex container-fluid col-10 px-0 my-3">-->
+<div id="deleteRecords" class="option d-flex container-fluid col-10 px-0 my-3 justify-content-center">
+    <div class="d-flex my-3 container-fluid col-4 mx-1">
+        <section class="container-fluid">
+            <form class="row">
+                <div class="col-2">
+                    <label for="datepicker1" class="col-form-label" th:text="#{date}"></label>
+                </div>
+                <div class="col-10">
+                    <div class="input-group date" id="datepicker1">
+                        <input type="text" class="form-control" id="date1" th:value="${date}"/>
+                        <span class="input-group-append">
+                            <span class="input-group-text bg-light d-block">
+                                <i class="fa fa-calendar"></i>
+                            </span>
+                        </span>
+                    </div>
+                    <p id="incorrect-date1" class="incorrect" th:text="#{date.incorrect}"></p>
+                </div>
+            </form>
 
-<!--    <div class="d-flex my-3 container-fluid col-4 mx-0">-->
-<!--        <section class="container-fluid">-->
-<!--            <form class="row">-->
-<!--                <div class="col-2">-->
-<!--                    <label for="d-datepicker" class="col-form-label">Date</label>-->
-<!--                </div>-->
-<!--                <div class="col-10">-->
-<!--                    <div class="input-group date" id="d-datepicker">-->
-<!--                        <input type="text" class="form-control" id="d-date"/>-->
-<!--                        <span class="input-group-append">-->
-<!--                            <span class="input-group-text bg-light d-block">-->
-<!--                                <i class="fa fa-calendar"></i>-->
-<!--                            </span>-->
-<!--                        </span>-->
-<!--                    </div>-->
-<!--                    <p id="d-incorrect-date" class="incorrect">You must choose future date</p>-->
-<!--                </div>-->
-<!--            </form>-->
+            <script type="text/javascript">
+                $(function () {
+                    $('#datepicker1').datepicker({format: 'd MM yyyy'});
+                });
+            </script>
+        </section>
+    </div>
+</div>
 
-<!--            <script type="text/javascript">-->
-<!--                $(function () {-->
-<!--                    $('#d-datepicker').datepicker({format: 'd MM yyyy'});-->
-<!--                });-->
-<!--            </script>-->
-<!--        </section>-->
-<!--    </div>-->
+<th:block th:unless="${recordData.isEmpty()}">
+    <th:block th:each="data:${recordData}">
+        <div th:id="|record${data.record.id}|" class="option container col-6 mb-3">
+            <div class="row">
+                <div class="col-5">
+                    <p th:text="${dateFormat.format(data.record.date)}"></p>
+                    <th:block th:if="${data.utility.description == null}">
+                        <p class="green" th:text="#{active}"></p>
+                    </th:block>
+                    <th:block th:if="${data.utility.description != null}">
+                        <p class="red" th:text="#{booked}"></p>
+                        <p th:text="${data.utility.name}"></p>
+                    </th:block>
+                </div>
 
-<!--    <div class="input-group mb-3 mt-3 mx-1">-->
-<!--        <div class="input-group-prepend col-2">-->
-<!--            <span class="input-group-text" id="basic-addon6">Start</span>-->
-<!--        </div>-->
-<!--        <div class="col-8">-->
-<!--            <input type="number" min="0" max="23" step="1" id="d-start-time" class="form-control"-->
-<!--                   placeholder="8" aria-label="Start" aria-describedby="basic-addon6" required>-->
-<!--            <p id="d-incorrect-start-hour" class="incorrect">Hour must be >= 0 & < 24</p>-->
-<!--        </div>-->
-<!--        <div class="input-group-append col-2">-->
-<!--            <span class="input-group-text" id="basic-addon7">:00</span>-->
-<!--        </div>-->
-<!--    </div>-->
+                <div th:if="${data.utility.description != null}" class="col-5">
+                    <p th:text="${data.profile.phoneNumber}"></p>
+                    <p th:text="${data.profile.email}"></p>
+                    <p th:text="${data.profile.firstName}"></p>
+                    <p></p>
+                </div>
 
-<!--    <div class="input-group mb-3 mt-3 mx-1">-->
-<!--        <div class="input-group-prepend col-2">-->
-<!--            <span class="input-group-text" id="basic-addon8">End</span>-->
-<!--        </div>-->
-<!--        <div class="col-8">-->
-<!--            <input type="number" min="0" max="23" step="1" id="d-end-time" class="form-control"-->
-<!--                   placeholder="17" aria-label="End" aria-describedby="basic-addon8" required>-->
-<!--            <p id="d-incorrect-end-hour" class="incorrect">Hour must be >= Start time & < 24</p>-->
-<!--            <p id="d-incorrect-end-hour1" class="incorrect">End time !== Start time</p>-->
-<!--        </div>-->
-<!--        <div class="input-group-append col-2">-->
-<!--            <span class="input-group-text" id="basic-addon9">:00</span>-->
-<!--        </div>-->
-<!--    </div>-->
+                <div th:unless="${data.utility.description != null}" class="col-5">
+                </div>
 
-<!--    <button type="button" class="btn btn-danger" th:onclick="deleteRecords()"><img th:src="@{/img/calendar2-x.svg}"-->
-<!--                                                                                   class="d-block mx-auto"-->
-<!--                                                                                   width="25">-->
-<!--    </button>-->
-<!--</div>-->
+                <div th:if="${data.utility.description != null}" class="col">
+                    <button type="button" class="w-75 h-100 btn btn-danger"
+                            th:onclick="cancelRecord([[${data.record.id}]])">
+                        <img th:src="@{/img/calendar2-x.svg}"
+                             class="d-block mx-auto"
+                             width="25">
+                    </button>
+                </div>
 
+                <div th:unless="${data.utility.description != null}" class="col">
+                    <button type="button" class="w-75 h-100 btn btn-outline-danger"
+                            th:onclick="cancelRecord([[${data.record.id}]])">
+                        <img th:src="@{/img/calendar2-x.svg}"
+                             class="d-block mx-auto"
+                             width="25">
+                    </button>
+                </div>
+            </div>
+        </div>
+    </th:block>
+</th:block>
+<th:block th:if="${recordData.isEmpty()}">
+    <div class="option d-flex container-fluid col-3 px-0 my-3 justify-content-center">
+        <p th:text="#{record.noRecords}"></p>
+    </div>
+</th:block>
 
 <script type="text/javascript" th:src="@{/js/scheduleRecord/assignSchedule.js}"></script>
 <script type="text/javascript" th:src="@{/js/main.js}"></script>
