--- a/web/src/main/resources/templates/select-time/select-time.html
+++ b/web/src/main/resources/templates/select-time/select-time.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
 
-    <!--    <title th:text="${orgName}"></title>-->
+        <title th:text="#{date_time.select}"></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
@@ -35,7 +35,7 @@
              onclick="goBack()">
     </div>
     <div class="d-flex flex-column col-11">
-        <p class="org_name text-center p-2">Услуги</p>
+        <p class="org_name text-center p-2" th:text="#{date_time.select}"></p>
     </div>
 </div>
 
