--- a/web/src/main/resources/static/css/organisation.css
+++ b/web/src/main/resources/static/css/organisation.css
@@ -44,3 +44,11 @@
 .profile-link:hover {
     cursor: pointer;
 }
+
+.create-record {
+    background-color: rgb(255, 193, 45);
+}
+
+.create-record:hover {
+    background-color: rgb(255, 216, 118);
+}
