Exceptions in Rest Requests handled: User will be alerted

--- a/web/src/main/resources/templates/organisation/manageOrganisation.html
+++ b/web/src/main/resources/templates/organisation/manageOrganisation.html
@@ -63,6 +63,7 @@
 
     <script type="text/javascript" th:src="@{/js/organisation/updateOrganisation.js}"></script>
     <script type="text/javascript" th:src="@{/js/organisation/manageOrganisation.js}"></script>
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 </div>
 
