--- a/web/src/main/resources/templates/organisation/updateOrganisation.html
+++ b/web/src/main/resources/templates/organisation/updateOrganisation.html
@@ -62,6 +62,7 @@
     <button type="button" id="delete" class="btn btn-primary mx-1 w-25" th:text="#{organisation.delete}"></button>
 
     <script type="text/javascript" th:src="@{/js/organisation/updateOrganisation.js}"></script>
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 </div>
 
