--- a/web/src/main/resources/templates/profile/manageProfile.html
+++ b/web/src/main/resources/templates/profile/manageProfile.html
@@ -58,6 +58,7 @@
     <button type="button" id="delete" class="btn btn-danger mx-1 w-25" th:onclick="deleteProfile([[${profile.id}]])">Удалить</button>
 
     <script type="text/javascript" th:src="@{/js/profiles/manageProfile.js}"></script>
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 </div>
 
