--- a/web/src/main/resources/templates/profile/updateProfile.html
+++ b/web/src/main/resources/templates/profile/updateProfile.html
@@ -116,6 +116,7 @@
     </button>
 
     <script type="text/javascript" th:src="@{/js/profiles/updateProfile.js}"></script>
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 </div>
 
