--- a/web/src/main/resources/templates/utility/createUtility.html
+++ b/web/src/main/resources/templates/utility/createUtility.html
@@ -66,6 +66,7 @@
 
     <script type="text/javascript" th:src="@{/js/utility/updateUtility.js}"></script>
     <script type="text/javascript" th:src="@{/js/utility/createUtility.js}"></script>
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 </div>
 
