--- a/web/src/main/resources/templates/utility/updateUtility.html
+++ b/web/src/main/resources/templates/utility/updateUtility.html
@@ -66,6 +66,7 @@
     <button type="button" id="delete" class="btn btn-primary" th:text="#{service.delete}"></button>
 
     <script type="text/javascript" th:src="@{/js/utility/updateUtility.js}"></script>
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 </div>
 
