--- a/web/src/main/resources/templates/fragment/admin/home.html
+++ b/web/src/main/resources/templates/fragment/admin/home.html
@@ -30,6 +30,7 @@
     </div>
 
     <script type="text/javascript" th:src="@{/js/home/home.js}"></script>
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 </th:block>
 </body>
