--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -264,5 +264,7 @@
         crossorigin="anonymous"
 ></script>
 
+<script type="text/javascript" th:src="@{/js/main.js}"></script>
+
 </body>
 </html>
