--- a/web/src/main/resources/templates/personal-cabinet/personal_cabinet.html
+++ b/web/src/main/resources/templates/personal-cabinet/personal_cabinet.html
@@ -74,6 +74,7 @@
 </div>
 
 <script type="text/javascript" th:src="@{/js/personal_cabinet/personal_cabinet.js}"></script>
+<script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 <script defer>
     setLocale('[[${locale}]]')
