--- a/web/src/main/resources/templates/security/login.html
+++ b/web/src/main/resources/templates/security/login.html
@@ -81,6 +81,7 @@
 </section>
 
 <script type="text/javascript" th:src="@{/js/security/login.js}"></script>
+<script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
