--- a/web/src/main/resources/templates/select-time/select-time.html
+++ b/web/src/main/resources/templates/select-time/select-time.html
@@ -87,6 +87,7 @@
 
 
 <script type="text/javascript" th:src="@{/js/scheduleRecord/select-time.js}"></script>
+<script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
