--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -62,8 +62,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
             </div>
             <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="btn btn-outline-success" type="submit">Login</button>
             </form>
         </div>
         </div>
@@ -81,25 +80,26 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <rect width="100%" height="100%" fill="#777"/>
-                </svg>
+<!--                <svg class="bd-placeholder-img" width="100%" height="100%"-->
+<!--                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false" th:src="@{/img/info-circle.svg}">-->
+<!--                    <rect width="100%" height="100%" fill="#777"/>-->
+<!--                </svg>-->
+
+                <img class="bd-placeholder-img" width="100%" height="100%"
+                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false" th:src="@{/img/calendar-ge59501769_1920.jpeg}">
 
                 <div class="container">
                     <div class="carousel-caption text-start">
                         <h1>Comprehensive management platform for your business</h1>
                         <p>Automated online solution for your business: online booking, scheduling, client relationship
                             management and more.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="organisation/createOrganisation">Create Organisation today</a></p>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <rect width="100%" height="100%" fill="#777"/>
-                </svg>
+                <img class="bd-placeholder-img" width="100%" height="100%"
+                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false" th:src="@{/img/charlesdeluvio-Lks7vei-eAg-unsplash.jpeg}">
 
                 <div class="container">
                     <div class="carousel-caption">
@@ -109,10 +109,8 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <rect width="100%" height="100%" fill="#777"/>
-                </svg>
+                <img class="bd-placeholder-img" width="100%" height="100%"
+                                            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false" th:src="@{/img/markus-spiske-XrIfY_4cK1w-unsplash.jpeg}">
 
                 <div class="container">
                     <div class="carousel-caption text-end">
@@ -242,6 +240,7 @@
         </div>
 
         <hr class="featurette-divider">
+
 
         <!-- /END THE FEATURETTES -->
 
