--- a/web/src/main/resources/templates/profile/updateProfile.html
+++ b/web/src/main/resources/templates/profile/updateProfile.html
@@ -45,13 +45,14 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon5" th:text="#{updateProfile.password}"></span>
             </div>
-            <input type="text" id="password" class="form-control" th:placeholder="#{updateProfile.password}"
+            <input type="text" id="password" class="form-control"
                    aria-label="Description" onchange="validatePassword()" aria-describedby="basic-addon3" disabled>
 
         </div>
         <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="updatePasswordCheckbox" th:onclick="enablePasswordChange()">
-            <label class="form-check-label" for="updatePasswordCheckbox" th:text="#{updateProfile.updatePassword}"></label>
+            <input type="checkbox" class="form-check-input" id="updatePasswordCheckbox">
+            <label class="form-check-label" for="updatePasswordCheckbox"
+                   th:text="#{updateProfile.updatePassword}"></label>
         </div>
         <p id="incorrect-password" class='my-0 incorrect' th:text="#{reg.incorrect-password}"></p>
     </div>
@@ -112,11 +113,17 @@
     <button type="button" id="update" class="btn btn-primary mx-1 w-40" th:onclick="updateProfile([[${profile}]])"
             th:text="#{updateProfile.update}"></button>
     <button type="button" id="delete" class="btn btn-danger mx-1 w-40" th:onclick="deleteProfile([[${profile.id}]])"
-            th:text="#{updateProfile.delete}">Удалить
-    </button>
+            th:text="#{updateProfile.delete}"></button>
 
     <script type="text/javascript" th:src="@{/js/profiles/updateProfile.js}"></script>
     <script type="text/javascript" th:src="@{/js/main.js}"></script>
+
+
+    <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+            crossorigin="anonymous"
+    ></script>
 
 </div>
 
