--- a/web/src/main/resources/templates/organisation/organisation.html
+++ b/web/src/main/resources/templates/organisation/organisation.html
@@ -25,11 +25,9 @@
 <script type="text/javascript" th:src="@{/js/organisation/organisation.js}"></script>
 <script type="text/javascript" th:src="@{/js/main.js}"></script>
 
-<script>
+<script defer>
     appendInactiveToSelectTime();
 </script>
-
-<script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
