--- a/web/src/main/resources/templates/personal-cabinet/personal_cabinet.html
+++ b/web/src/main/resources/templates/personal-cabinet/personal_cabinet.html
@@ -23,7 +23,7 @@
     <div class="col-1 my-auto mx-auto">
         <img th:src="@{/img/arrow-left-circle.svg}" class="img-fluid go-back-button"
              width="24"
-             th:onclick="goBack([[${referer.toString()}]])">
+             th:onclick="goBack([[${referer}]])">
     </div>
     <div class="d-flex flex-column col-11">
         <p class="text-center p-2" th:text="#{personal_account}"></p>
