Error pages bug fixed: view correctly

--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -61,7 +61,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
             </div>
-            <form class="d-flex">
+            <form class="d-flex" action="/login">
                 <button class="btn btn-outline-success" type="submit">Login</button>
             </form>
         </div>
