Conversion error from String to Spring user in checkThatRedactorBelongsToOrganisation(id) fixed

--- a/web/src/main/resources/templates/error/404.html
+++ b/web/src/main/resources/templates/error/404.html
@@ -1,6 +1,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link th:href="@{/css/error/error-404.css}" rel="stylesheet"/>
 <div class="errorBox">
+    <title>404</title>
     <header>
         <h1>../404.html</h1><a class="close" href="">&times;</a>
     </header>
