--- a/web/src/main/resources/static/css/login.css
+++ b/web/src/main/resources/static/css/login.css
@@ -22,3 +22,10 @@
     font-style: italic;
     display: none;
 }
+
+.incorrect-creds {
+    font-size: small;
+    font-weight: revert;
+    color: red;
+    font-style: italic;
+}
