cursor on links in /profile/current is now cursor

--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -101,7 +101,7 @@
             <div class="carousel-item">
                 <img class="bd-placeholder-img" width="100%" height="100%"
                      aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"
-                     th:src="@{/img/charlesdeluvio-Lks7vei-eAg-unsplash.jpeg}">
+                     th:src="@{/img/shutterstock_1731284125_0.jpeg}">
 
                 <div class="container">
                     <div class="carousel-caption">
@@ -145,34 +145,20 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
             <div class="col-lg-4">
-                <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#777"/>
-                    <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-                </svg>
+
+                <img th:src="@{/img/bigstock-Calendar-With-Schedule-Plans-p-254459887-1.jpeg}" class="bd-placeholder-img rounded-circle" width="140" height="140">
 
                 <h2>Schedule management</h2>
                 <p>Effortlessly schedule, reschedule and cancel any online and offline appointments.</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#777"/>
-                    <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-                </svg>
+                <img th:src="@{/img/kaleidico-3V8xo5Gbusk-unsplash.jpeg}" class="bd-placeholder-img rounded-circle" width="140" height="140">
 
                 <h2>Team and paysheet management</h2>
                 <p>Manage employees: shifts, off-hours, days off, payroll.</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#777"/>
-                    <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-                </svg>
+                <img th:src="@{/img/FacebookBookNowButton_Feature.jpeg}" class="bd-placeholder-img rounded-circle" width="140" height="140">
 
                 <h2>Get bookings online</h2>
                 <p>Manage your schedule, employees, clients and online payments with an automated budget-friendly
@@ -193,12 +179,10 @@
                     Affordable. Comrehensive. User-oriented.</p>
             </div>
             <div class="col-md-5">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                     height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"/>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-                </svg>
+
+                <img th:src="@{/img/Capgemini_Our-Code-of-Business-Ethics.webp}" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+                     height="500" role="img" aria-label="Placeholder: 500x500"
+                     preserveAspectRatio="xMidYMid slice" focusable="false">
 
             </div>
         </div>
@@ -214,12 +198,10 @@
                 </p>
             </div>
             <div class="col-md-5 order-md-1">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                     height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"/>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-                </svg>
+
+                <img th:src="@{/img/Beauty-Salon.jpeg}" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+                     height="500" role="img" aria-label="Placeholder: 500x500"
+                     preserveAspectRatio="xMidYMid slice" focusable="false">
 
             </div>
         </div>
@@ -233,12 +215,10 @@
                     over 5 repeated visits on average.</p>
             </div>
             <div class="col-md-5">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                     height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"/>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-                </svg>
+
+                <img th:src="@{/img/time-and-attendance-gb7a7b1798_1920.jpeg}" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+                     height="500" role="img" aria-label="Placeholder: 500x500"
+                     preserveAspectRatio="xMidYMid slice" focusable="false">
 
             </div>
         </div>
@@ -259,7 +239,6 @@
 </main>
 
 
-<!--<script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
 
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
