Go Back links added to error pages

--- a/web/src/main/resources/templates/error/400.html
+++ b/web/src/main/resources/templates/error/400.html
@@ -16,8 +16,9 @@
     <div class="text-center">
         <h1 class="display-1 fw-bold">400</h1>
         <p class="fs-3"> <span class="text-danger"th:text="#{oops}"></span> <span></span>.</p>
-        <p class="lead" th:text="#{badRequestMsg}">
-        </p>
+        <p class="lead" th:text="#{badRequestMsg}"></p>
+        <p><a href="/">Go to main page</a></p>
+        <p><a onclick="history.back()" href="#">Go back</a></p>
     </div>
 </div>
 </body>
