--- a/web/src/main/resources/templates/error/500.html
+++ b/web/src/main/resources/templates/error/500.html
@@ -12,6 +12,8 @@
     <h3>ERROR 500</h3>
     <p>Things are a little <span>unstable</span> here</p>
     <p>I suggest come back later</p>
+    <p><a href="/">Go to main page</a></p>
+    <p><a onclick="history.back()" href="#">Go back</a></p>
 </div>
 </body>
 </html>
