--- a/web/src/main/resources/templates/error/403.html
+++ b/web/src/main/resources/templates/error/403.html
@@ -16,6 +16,8 @@
     <div class="text-center">
         <h1 class="display-1 fw-bold" >403 Forbidden</h1>
         <p class="fs-3"> <span class="text-danger" th:text="#{oops}"></span> <span th:text="#{forbidden}"></span></p>
+        <p><a href="/">Go to main page</a></p>
+        <p><a onclick="history.back()" href="#">Go back</a></p>
     </div>
 </div>
 </body>
